# upstash-ratelimit-rs

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/: axum.rs  rocket.rs
examples/with-actix/: Cargo.toml
examples/with-actix/src/: main.rs
scripts/single_region/: fixed_window.lua  sliding_window.lua  token_window.lua
src/: cache.rs  common.rs  duration.rs  lib.rs
src/model/: cache.rs  common.rs  mod.rs  region.rs
src/ratelimit/: algorithm.rs  cache.rs  common.rs  duration.rs  mod.rs  single.rs
tests/: common.rs  ratelimit.rs
