[package]
name = "upstash-ratelimit-rs"
version = "1.0.0"
edition = "2021"
authors = ["Sourab Pramanik <shubpramanik241@gmail.com>"]
description = "An unofficial Upstash rate limiting SDK in Rust"
repository = "https://github.com/sourabpramanik/upstash-ratelimit-rs"
homepage = "https://github.com/sourabpramanik/upstash-ratelimit-rs"
keywords = ["redis", "ratelimit", "sdk", "upstash", "kv"]
license = "MIT"

[[example]]
name = "with-actix"
path = "examples/actix.rs"

[[example]]
name = "with-axum"
path = "examples/axum.rs"

[lib]
doctest = false

[dependencies]
assert-panic = "1.0.1"
chrono = "0.4"
dotenv = "0.15"
futures = "0.3"
nanoid = "0.4.0"
redis = {version = "0.24.0", features = ["tokio-comp"]}
regex = "1.10.3"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
axum = "0.7.4"
tracing-subscriber = "0.3.18"
tokio = { version = "1.0", features = ["full"] }
actix-web = "4"
dotenv = "0.15"
redis = {version = "0.24.0", features = ["tokio-comp"]}
upstash-ratelimit-rs = {path = "./"}